--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-tsparticles": "^2.12.2",
+    "swiper": "^11.2.10",
     "tsparticles": "^3.8.1",
     "tsparticles-slim": "^2.12.0"
   },
@@ -22,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/swiper": "^5.4.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
