--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-github-calendar": "^4.5.9",
     "react-icons": "^5.5.0",
     "react-tsparticles": "^2.12.2",
     "swiper": "^11.2.10",
